--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </nav>
     </header>
     <section>
-        <div id="carouselExampleIndicators" class="carousel slide carousel-fade">
+        <div id="carouselExampleIndicators" class="carousel slide carousel-fade data-bs-ride="carousel" data-bs-touch="false">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -49,7 +49,7 @@
             <div class="carousel-inner">
               <div class="carousel-item active c-item ">
                 <img src="img/cu-a.jpg" class="d-block w-100 c-img" alt="...">
-                <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+                <div class="carousel-caption top-0 mt-4  d-md-block">
                     <h5 class="mt-5 fs-3">Welcome <i class="fa-solid fa-store"></i></h5>
                     <p class="fw-bolder display-2 ">Buy Mobiles & Tablets At Best Prices</p>
                     <button class="btn btn-primary px-4 py-2 fs-f mt-5 ">View More</button>
@@ -57,7 +57,7 @@
               </div>
               <div class="carousel-item c-item " > 
                 <img src="img/cu-b.jpg" class="d-block w-100 c-img" alt="...">
-                <div class="carousel-caption top-50 bottom-0 start-50 d-none d-md-block">
+                <div class="carousel-caption top-50 bottom-0 start-50  d-md-block">
                     <h5 class="display-3 fw-bolder">Accessories <i class="fa-solid fa-keyboard"></i></h5>
                     <p>Lorem ipsum dolor sit amet consectetur..</p>
                     <button class="btn btn-primary text-uppercase">shop now</button>
@@ -65,7 +65,7 @@
               </div>
               <div class="carousel-item c-item ">
                 <img src="img/cu-c.jpg" class="d-block w-100 c-img" alt="...">
-                <div class="carousel-caption text-start d-none d-md-block ">
+                <div class="carousel-caption text-start  d-md-block ">
                     <h5 class="display-3 fw-bolder">Electronics <i class="fa-solid fa-bolt"></i></h5>
                     <p>Some representative placeholder content for the first slide.</p>
                     <button class="btn btn-primary">Shop Now</button>
