--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </nav>
     </header>
     <section>
-        <div id="carouselExampleIndicators" class="carousel slide carousel-fade data-bs-ride="carousel" data-bs-touch="false">
+        <div id="carouselExampleIndicators" class="carousel slide carousel-fade " data-bs-ride="carousel" data-bs-touch="false">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
