--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               </div>
               <div class="carousel-item c-item " data-bs-interval="3000" > 
                 <img src="img/cu-b.jpg" class="d-block w-100 c-img" alt="...">
-                <div class="carousel-caption top-50 bottom-0 start-50  d-md-block">
+                <div class="carousel-caption text-end  d-md-block">
                     <h5 class="display-3 fw-bolder">Accessories <i class="fa-solid fa-keyboard"></i></h5>
                     <p>Lorem ipsum dolor sit amet consectetur..</p>
                     <button class="btn btn-primary text-uppercase">shop now</button>
